[+] Updating PDF Form Filler Plugin - Deactivated - For initial pdf to cf7 form field creation only

--- a/wp-content/plugins/pdf-forms-for-contact-form-7/html/add_pdf.html
+++ b/wp-content/plugins/pdf-forms-for-contact-form-7/html/add_pdf.html
@@ -25,6 +25,7 @@
 							<div><input data-option="skip_empty" type="checkbox"/> {skip-when-empty}</div>
 							<div><input data-option="attach_to_mail_1" type="checkbox"/> {attach-to-mail-1}</div>
 							<div><input data-option="attach_to_mail_2" type="checkbox"/> {attach-to-mail-2}</div>
+							<div><input data-option="flatten" type="checkbox"/> {flatten}</div>
 						</div>
 					</td>
 					<td class="pdf-buttons">
